Fix img nested in href not displaying with opacity on FireFox

--- a/css/main.css
+++ b/css/main.css
@@ -291,7 +291,6 @@ h3 {
 .hovereffect p, .hovereffect a {
   color: #FFF;
   padding: 1em 0;
-  opacity: 0;
   filter: alpha(opacity=0);
   -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
   transition: opacity 0.35s, transform 0.35s;
